--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
+<!DOCTYPE html>
 <html>
-  <body>
-    <title>
-      politiet
-    </title>
-    <h1>
-      Hei politiet
-    </h1>
-  </body>
+<body>
+
+<h1>My First Heading</h1>
+<p>My first paragraph.</p>
+
+</body>
 </html>
