feat: forside klar

--- a/index.html
+++ b/index.html
@@ -1,1 +1,288 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Teknisk retning - PIT</title>
 
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+
+    <style>
+      /* CSS Reset */
+      /* 1. Use a more-intuitive box-sizing model */
+      *,
+      *::before,
+      *::after {
+        box-sizing: border-box;
+      }
+      /* 2. Remove default margin */
+      * {
+        margin: 0;
+      }
+      body {
+        /* 3. Add accessible line-height */
+        line-height: 1.5;
+        /* 4. Improve text rendering */
+        -webkit-font-smoothing: antialiased;
+      }
+      /* 5. Improve media defaults */
+      img,
+      picture,
+      video,
+      canvas,
+      svg {
+        display: block;
+        max-width: 100%;
+      }
+      /* 6. Inherit fonts for form controls */
+      input,
+      button,
+      textarea,
+      select {
+        font: inherit;
+      }
+      /* 7. Avoid text overflows */
+      p,
+      h1,
+      h2,
+      h3,
+      h4,
+      h5,
+      h6 {
+        overflow-wrap: break-word;
+      }
+      /* 8. Improve line wrapping */
+      p {
+        text-wrap: pretty;
+      }
+      h1,
+      h2,
+      h3,
+      h4,
+      h5,
+      h6 {
+        text-wrap: balance;
+      }
+      /*
+        9. Create a root stacking context
+        */
+      #root,
+      #__next {
+        isolation: isolate;
+      }
+
+      /* Application CSS*/
+      body {
+        font-family: Roboto;
+      }
+
+      .box {
+        background-color: white;
+        padding: 2rem;
+        border-radius: 1rem;
+      }
+    </style>
+  </head>
+  <body>
+    <header
+      style="
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        gap: 2rem;
+        padding: 2rem;
+      "
+    >
+      <div style="display: grid; gap: 1.5rem">
+        <h1 style="text-transform: uppercase; color: #00263e">Retninger</h1>
+        <p style="font-size: 20px">
+          Retningene i PIT skal sikre at vi lager gode og trygge tjenester som
+          bidrar til å løse samfunnsoppdraget.
+        </p>
+      </div>
+      <img
+        src="images/politiet_logo.jpg"
+        alt="Politiets logo"
+        style="height: 3rem; width: auto"
+      />
+    </header>
+    <main style="padding: 2rem; background: #d0e2f3; display: grid; gap: 2rem">
+      <section
+        class="box"
+        style="
+          display: grid;
+          gap: 2rem;
+          margin-top: 2rem;
+          grid-column: 1 / span 2;
+        "
+      >
+        <div style="display: flex; gap: 5rem; flex-wrap: wrap">
+          <div
+            style="
+              display: flex;
+              gap: 2rem;
+              align-items: center;
+              width: calc(50% - 2.5rem);
+              height: 8rem;
+            "
+          >
+            <img
+              src="images/innbygger.svg"
+              alt="Mann som smiler"
+              style="height: 12rem; position: relative; top: -2rem"
+            />
+            <p>
+              <strong style="color: #00263e">U T S I D E</strong><br />
+              <span>Innbyggerne vi er til for</span>
+            </p>
+          </div>
+          <div
+            style="
+              display: flex;
+              gap: 2rem;
+              align-items: center;
+              width: calc(50% - 2.5rem);
+              height: 8rem;
+            "
+          >
+            <img
+              src="images/politidame.svg"
+              alt="Politidame som snakker i politiradioen"
+              style="height: 12rem; position: relative; top: -1rem"
+            />
+            <p>
+              <strong style="color: #00263e">I N N S I D E </strong><br />
+              <span>Ansatte som leverer på samfunnsoppdraget</span>
+            </p>
+          </div>
+        </div>
+        <div style="height: 2px; background: #d0e2f3"></div>
+        <section style="display: grid; gap: 2rem">
+          <p>
+            Vi ønsker å levere tjenester hvor
+            <strong>BRUKEROPPLEVELSEN</strong> bidrar til at politiet oppfattes
+            som
+          </p>
+          <div
+            style="display: grid; grid-template-columns: 1fr 1fr 1fr; gap: 2rem"
+          >
+            <p>
+              <strong>trygge og tillitsvekkende</strong><br />
+              Politiet er troverdige og evner å ivareta behov på tvers for å
+              lage et trygt samfunn for alle
+            </p>
+            <p>
+              <strong>seriøse og rettferdige</strong><br />
+              Politiet skal være lett å komme i kontakt med, til stede på ulike
+              arenaer og i relevant form.
+            </p>
+            <p>
+              <strong>tilgjengelige og til stede</strong><br />
+              Politiet skal håndheve loven på en god måte og vise empati,
+              forståelse og være lyttende.
+            </p>
+          </div>
+        </section>
+      </section>
+      <section class="box" style="grid-column: 1/2">
+        <div style="display: grid; gap: 2rem">
+          <p>Vi jobber sammen i <strong>TEAM</strong> som</p>
+          <ul>
+            <li>er trygge</li>
+            <li>forstår brukerens behov</li>
+            <li>jobber tverrfagelig</li>
+            <li>skaper fart og flyt</li>
+            <li>lærer og eksperimenterer</li>
+            <li>jobber etter mål</li>
+          </ul>
+        </div>
+        <img
+          src="images/politiapp.svg"
+          alt="Politimann som trykker på mobiltelefon, mens smilende dame med kaffekopp og en mann venter"
+          style="width: 100%; max-width: 20rem; margin: 0 auto"
+        />
+      </section>
+      <section style="grid-column: 2/2">
+        <section class="box" style="position: relative; padding-bottom: 12rem">
+          <div style="display: grid; gap: 2rem">
+            <p>vi sikrer at vår <strong>TEKNOLOGI</strong> er</p>
+            <ul>
+              <li>løst koblet</li>
+              <li>datadrevet</li>
+              <li>pålitelig</li>
+              <li>cloud first</li>
+              <li>cloud native</li>
+            </ul>
+          </div>
+          <img
+            src="images/kontordame.svg"
+            alt="Dame ser på datamaskin skjerm. Grafisk illustrasjon av Norge i bakgrunnen."
+            style="
+              max-width: 18rem;
+              margin: 0 auto;
+              position: absolute;
+              bottom: -3.5rem;
+              left: 12%;
+            "
+          />
+        </section>
+      </section>
+      <section
+        style="
+          grid-column: 1 / span 2;
+          padding-bottom: 15rem;
+          position: relative;
+        "
+      >
+        <section
+          class="box"
+          style="display: grid; gap: 2rem; padding-bottom: 10rem"
+        >
+          <p>Du og jeg er <strong>FOLK</strong> i PIT. Sammen skal vi</p>
+          <div style="display: flex; flex-wrap: wrap; gap: 3rem">
+            <div>
+              <ul>
+                <li>lære og utvikle oss</li>
+                <li>samarbeide på tvers av fagområder</li>
+                <li>gi og få feedback måle for å bli bedre</li>
+                <li>være åpne og transparente</li>
+                <li>eie helheten</li>
+                <li>ville hverandre vel</li>
+              </ul>
+            </div>
+            <div>
+              <b>Jeg bidrar ved å</b><br />
+              <ul>
+                <li>være nysgjerrig på andres perspektiv</li>
+                <li>bruke tid på problemforståelse</li>
+                <li>ta initiativ</li>
+                <li>dele</li>
+              </ul>
+            </div>
+            <div>
+              <b>Som leder vil jeg i tillegg</b><br />
+              <ul>
+                <li>sette retning</li>
+                <li>prioritere verdi</li>
+                <li>tilrettelegge</li>
+                <li>coache</li>
+                <li>gå foran som et godt eksempel</li>
+              </ul>
+            </div>
+          </div>
+        </section>
+        <img
+          src="images/mannogdame_app.svg"
+          alt="Mann og dame ser på nettbrett"
+          style="position: absolute; left: 38%; width: 16rem; bottom: 4rem"
+        />
+      </section>
+    </main>
+  </body>
+</html>
