--- a/index.html
+++ b/index.html
@@ -82,10 +82,144 @@
         font-family: Roboto;
       }
 
+      main {
+        container: main / inline-size;
+      }
+
       .box {
         background-color: white;
         padding: 2rem;
         border-radius: 1rem;
+      }
+
+      /* Section 1 */
+      .section-1 {
+        container: section-1 / inline-size;
+      }
+
+      .section-1-top-item-image {
+        position: relative;
+      }
+
+      @container section-1 (min-width: 900px) {
+        .section-1-top-item {
+          display: flex;
+          gap: 2rem;
+          align-items: center;
+          width: calc(50% - 2.5rem);
+          height: 8rem;
+        }
+
+        .section-1-top-item-1-image {
+          top: -2rem;
+        }
+
+        .section-1-top-item-2-image {
+          top: -1rem;
+        }
+      }
+
+      @container section-1 (max-width: 900px) and (min-width: 500px) {
+        .section-1-top-item {
+          display: grid;
+          gap: 1rem;
+          width: calc(50% - 2.5rem);
+        }
+
+        .section-1-top-item-2-image {
+          top: 1rem;
+        }
+      }
+
+      @container section-1 (min-width: 500px) {
+        .section-1-top-container {
+          display: flex;
+          gap: 5rem;
+          flex-wrap: wrap;
+        }
+
+        .section-1-top-item-image {
+          height: 12rem;
+        }
+
+        .section-1-text-cols-container {
+          display: grid;
+          grid-template-columns: 1fr 1fr 1fr;
+          gap: 2rem;
+        }
+      }
+
+      @container section-1 (max-width: 500px) {
+        .section-1-top-container {
+          display: grid;
+          gap: 2rem;
+        }
+
+        .section-1-top-item {
+          display: grid;
+          gap: 2rem;
+          text-align: center;
+        }
+
+        .section-1-top-item-image {
+          max-height: 20rem;
+          margin: 0 auto;
+        }
+
+        .section-1-top-item-2-image {
+          top: 2rem;
+        }
+
+        .section-1-text-cols-container {
+          display: grid;
+          gap: 2rem;
+        }
+      }
+
+      /* Section 2 and 3 */
+      @container main (max-width: 1000px) {
+        .section-2,
+        .section-3 {
+          grid-column: 1 / span 2;
+        }
+
+        .section-3 {
+          padding-bottom: 3rem;
+        }
+      }
+
+      /* Section 4 */
+      .section-4 {
+        container: section-4 / inline-size;
+      }
+
+      .section-4-image {
+        position: absolute;
+        width: 16rem;
+      }
+
+      @container section-4 (min-width: 1000px) {
+        .section-4-image {
+          bottom: 4rem;
+        }
+      }
+
+      @container section-4 (max-width: 1000px) {
+        .section-4-image {
+          bottom: 2rem;
+        }
+      }
+
+      @container section-4 (min-width: 500px) {
+        .section-4-image {
+          left: 38%;
+        }
+      }
+
+      @container section-4 (max-width: 500px) {
+        .section-4-image {
+          left: 17%;
+        }
       }
     </style>
   </head>
@@ -112,9 +246,17 @@
         style="height: 3rem; width: auto"
       />
     </header>
-    <main style="padding: 2rem; background: #d0e2f3; display: grid; gap: 2rem">
+    <main
+      style="
+        padding: 2rem;
+        background: #d0e2f3;
+        display: grid;
+        gap: 2rem;
+        grid-template-columns: repeat(2, 1fr);
+      "
+    >
       <section
-        class="box"
+        class="box section-1"
         style="
           display: grid;
           gap: 2rem;
@@ -122,39 +264,23 @@
           grid-column: 1 / span 2;
         "
       >
-        <div style="display: flex; gap: 5rem; flex-wrap: wrap">
-          <div
-            style="
-              display: flex;
-              gap: 2rem;
-              align-items: center;
-              width: calc(50% - 2.5rem);
-              height: 8rem;
-            "
-          >
+        <div class="section-1-top-container">
+          <div class="section-1-top-item">
             <img
               src="images/innbygger.svg"
               alt="Mann som smiler"
-              style="height: 12rem; position: relative; top: -2rem"
+              class="section-1-top-item-image section-1-top-item-1-image"
             />
             <p>
               <strong style="color: #00263e">U T S I D E</strong><br />
               <span>Innbyggerne vi er til for</span>
             </p>
           </div>
-          <div
-            style="
-              display: flex;
-              gap: 2rem;
-              align-items: center;
-              width: calc(50% - 2.5rem);
-              height: 8rem;
-            "
-          >
+          <div class="section-1-top-item">
             <img
               src="images/politidame.svg"
               alt="Politidame som snakker i politiradioen"
-              style="height: 12rem; position: relative; top: -1rem"
+              class="section-1-top-item-image section-1-top-item-2-image"
             />
             <p>
               <strong style="color: #00263e">I N N S I D E </strong><br />
@@ -169,9 +295,7 @@
             <strong>BRUKEROPPLEVELSEN</strong> bidrar til at politiet oppfattes
             som
           </p>
-          <div
-            style="display: grid; grid-template-columns: 1fr 1fr 1fr; gap: 2rem"
-          >
+          <div class="section-1-text-cols-container">
             <p>
               <strong>trygge og tillitsvekkende</strong><br />
               Politiet er troverdige og evner å ivareta behov på tvers for å
@@ -190,7 +314,7 @@
           </div>
         </section>
       </section>
-      <section class="box" style="grid-column: 1/2">
+      <section class="box section-2">
         <div style="display: grid; gap: 2rem">
           <p>Vi jobber sammen i <strong>TEAM</strong> som</p>
           <ul>
@@ -208,7 +332,7 @@
           style="width: 100%; max-width: 20rem; margin: 0 auto"
         />
       </section>
-      <section style="grid-column: 2/2">
+      <section class="section-3">
         <section class="box" style="position: relative; padding-bottom: 12rem">
           <div style="display: grid; gap: 2rem">
             <p>vi sikrer at vår <strong>TEKNOLOGI</strong> er</p>
@@ -234,6 +358,7 @@
         </section>
       </section>
       <section
+        class="section-4"
         style="
           grid-column: 1 / span 2;
           padding-bottom: 15rem;
@@ -280,7 +405,7 @@
         <img
           src="images/mannogdame_app.svg"
           alt="Mann og dame ser på nettbrett"
-          style="position: absolute; left: 38%; width: 16rem; bottom: 4rem"
+          class="section-4-image"
         />
       </section>
     </main>
