fix: politiet logoen alltid øverst i høyre hjørne

--- a/index.html
+++ b/index.html
@@ -224,27 +224,27 @@
     </style>
   </head>
   <body>
-    <header
-      style="
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        gap: 2rem;
-        padding: 2rem;
-      "
-    >
-      <div style="display: grid; gap: 1.5rem">
+    <header style="display: grid; gap: 1.5rem; padding: 2rem">
+      <div
+        style="
+          display: flex;
+          gap: 2rem;
+          flex-wrap: wrap;
+          justify-content: space-between;
+          align-items: center;
+        "
+      >
         <h1 style="text-transform: uppercase; color: #00263e">Retninger</h1>
-        <p style="font-size: 20px">
-          Retningene i PIT skal sikre at vi lager gode og trygge tjenester som
-          bidrar til å løse samfunnsoppdraget.
-        </p>
+        <img
+          src="images/politiet_logo.jpg"
+          alt="Politiets logo"
+          style="height: 2.5rem; width: auto"
+        />
       </div>
-      <img
-        src="images/politiet_logo.jpg"
-        alt="Politiets logo"
-        style="height: 3rem; width: auto"
-      />
+      <p style="font-size: 20px">
+        Retningene i PIT skal sikre at vi lager gode og trygge tjenester som
+        bidrar til å løse samfunnsoppdraget.
+      </p>
     </header>
     <main
       style="
