fix: Dette skulle være to kulepunkter

--- a/index.html
+++ b/index.html
@@ -360,7 +360,8 @@
               <ul>
                 <li>lære og utvikle oss</li>
                 <li>samarbeide på tvers av fagområder</li>
-                <li>gi og få feedback måle for å bli bedre</li>
+                <li>gi og få feedback</li>
+                <li>måle for å bli bedre</li>
                 <li>være åpne og transparente</li>
                 <li>eie helheten</li>
                 <li>ville hverandre vel</li>
