fix: Rette skrivefeil

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
       </div>
       <p style="font-size: 20px">
         Retningene i PIT skal sikre at vi lager gode og trygge tjenester som
-        bidrar til å løse samfunnsoppdraget.
+        bidrar til å løse samfunnsoppdraget
       </p>
     </header>
     <main
@@ -289,12 +289,12 @@
             <p>
               <strong>seriøse og rettferdige</strong><br />
               Politiet skal være lett å komme i kontakt med, til stede på ulike
-              arenaer og i relevant form.
+              arenaer og i relevant form
             </p>
             <p>
               <strong>tilgjengelige og til stede</strong><br />
               Politiet skal håndheve loven på en god måte og vise empati,
-              forståelse og være lyttende.
+              forståelse og være lyttende
             </p>
           </div>
         </section>
@@ -305,7 +305,7 @@
           <ul>
             <li>er trygge</li>
             <li>forstår brukerens behov</li>
-            <li>jobber tverrfagelig</li>
+            <li>jobber tverrfaglig</li>
             <li>skaper fart og flyt</li>
             <li>lærer og eksperimenterer</li>
             <li>jobber etter mål</li>
