fix: Rette skrivefeil

--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
       <section class="section-3">
         <section class="box" style="position: relative; padding-bottom: 12rem">
           <div style="display: grid; gap: 2rem">
-            <p>vi sikrer at vår <strong>TEKNOLOGI</strong> er</p>
+            <p>Vi sikrer at vår <strong>TEKNOLOGI</strong> er</p>
             <ul>
               <li>løst koblet</li>
               <li>datadrevet</li>
