--- a/index.html
+++ b/index.html
@@ -13,83 +13,13 @@
       rel="stylesheet"
     />
 
+    <link href="/common.css" rel="stylesheet" />
+    <script type="module" src="/box.js"></script>
+
     <style>
-      /* CSS Reset */
-      /* 1. Use a more-intuitive box-sizing model */
-      *,
-      *::before,
-      *::after {
-        box-sizing: border-box;
-      }
-      /* 2. Remove default margin */
-      * {
-        margin: 0;
-      }
-      body {
-        /* 3. Add accessible line-height */
-        line-height: 1.5;
-        /* 4. Improve text rendering */
-        -webkit-font-smoothing: antialiased;
-      }
-      /* 5. Improve media defaults */
-      img,
-      picture,
-      video,
-      canvas,
-      svg {
-        display: block;
-        max-width: 100%;
-      }
-      /* 6. Inherit fonts for form controls */
-      input,
-      button,
-      textarea,
-      select {
-        font: inherit;
-      }
-      /* 7. Avoid text overflows */
-      p,
-      h1,
-      h2,
-      h3,
-      h4,
-      h5,
-      h6 {
-        overflow-wrap: break-word;
-      }
-      /* 8. Improve line wrapping */
-      p {
-        text-wrap: pretty;
-      }
-      h1,
-      h2,
-      h3,
-      h4,
-      h5,
-      h6 {
-        text-wrap: balance;
-      }
-      /*
-        9. Create a root stacking context
-        */
-      #root,
-      #__next {
-        isolation: isolate;
-      }
-
       /* Application CSS*/
-      body {
-        font-family: Roboto;
-      }
-
       main {
         container: main / inline-size;
-      }
-
-      .box {
-        background-color: white;
-        padding: 2rem;
-        border-radius: 1rem;
       }
 
       /* Section 1 */
@@ -221,7 +151,7 @@
       >
         <h1 style="text-transform: uppercase; color: #00263e">Retninger</h1>
         <img
-          src="images/politiet_logo.jpg"
+          src="/images/politiet_logo.jpg"
           alt="Politiets logo"
           style="height: 2.5rem; width: auto"
         />
@@ -240,8 +170,8 @@
         grid-template-columns: repeat(2, 1fr);
       "
     >
-      <section
-        class="box section-1"
+      <tr-box
+        class="section-1"
         style="
           display: grid;
           gap: 2rem;
@@ -252,7 +182,7 @@
         <div class="section-1-top-container">
           <div class="section-1-top-item">
             <img
-              src="images/innbygger.svg"
+              src="/images/innbygger.svg"
               alt="Mann som smiler"
               class="section-1-top-item-image section-1-top-item-1-image"
             />
@@ -263,7 +193,7 @@
           </div>
           <div class="section-1-top-item">
             <img
-              src="images/politidame.svg"
+              src="/images/politidame.svg"
               alt="Politidame som snakker i politiradioen"
               class="section-1-top-item-image section-1-top-item-2-image"
             />
@@ -298,8 +228,8 @@
             </p>
           </div>
         </section>
-      </section>
-      <section class="box section-2">
+      </tr-box>
+      <tr-box class="section-2">
         <div style="display: grid; gap: 2rem">
           <p>Vi jobber sammen i <strong>TEAM</strong> som</p>
           <ul>
@@ -312,13 +242,13 @@
           </ul>
         </div>
         <img
-          src="images/politiapp.svg"
+          src="/images/politiapp.svg"
           alt="Politimann som trykker på mobiltelefon, mens smilende dame med kaffekopp og en mann venter"
           style="width: 100%; max-width: 20rem; margin: 0 auto"
         />
-      </section>
+      </tr-box>
       <section class="section-3">
-        <section class="box" style="position: relative; padding-bottom: 12rem">
+        <tr-box style="position: relative; padding-bottom: 12rem">
           <div style="display: grid; gap: 2rem">
             <p>Vi sikrer at vår <strong>TEKNOLOGI</strong> er</p>
             <ul>
@@ -330,7 +260,7 @@
             </ul>
           </div>
           <img
-            src="images/kontordame.svg"
+            src="/images/kontordame.svg"
             alt="Dame ser på datamaskin skjerm. Grafisk illustrasjon av Norge i bakgrunnen."
             style="
               max-width: 18rem;
@@ -340,7 +270,7 @@
               left: 12%;
             "
           />
-        </section>
+        </tr-box>
       </section>
       <section
         class="section-4"
@@ -350,10 +280,7 @@
           position: relative;
         "
       >
-        <section
-          class="box"
-          style="display: grid; gap: 2rem; padding-bottom: 10rem"
-        >
+        <tr-box style="display: grid; gap: 2rem; padding-bottom: 10rem">
           <p>Du og jeg er <strong>FOLK</strong> i PIT. Sammen skal vi</p>
           <div style="display: flex; flex-wrap: wrap; gap: 3rem">
             <div>
@@ -387,9 +314,9 @@
               </ul>
             </div>
           </div>
-        </section>
+        </tr-box>
         <img
-          src="images/mannogdame_app.svg"
+          src="/images/mannogdame_app.svg"
           alt="Mann og dame ser på nettbrett"
           class="section-4-image"
         />
