refactor: flyttet box.js til mappen components. Flyttet main container definisjon til global css

--- a/index.html
+++ b/index.html
@@ -14,14 +14,9 @@
     />
 
     <link href="/common.css" rel="stylesheet" />
-    <script type="module" src="/box.js"></script>
+    <script type="module" src="/components/box.js"></script>
 
     <style>
-      /* Application CSS*/
-      main {
-        container: main / inline-size;
-      }
-
       /* Section 1 */
       .section-1 {
         container: section-1 / inline-size;
