fix(team): side /team og header web component

--- a/index.html
+++ b/index.html
@@ -226,7 +226,9 @@
       </tr-box>
       <tr-box class="section-2">
         <div style="display: grid; gap: 2rem">
-          <p>Vi jobber sammen i <strong>TEAM</strong> som</p>
+          <p>
+            Vi jobber sammen i <strong><a href="/team">TEAM</a></strong> som
+          </p>
           <ul>
             <li>er trygge</li>
             <li>forstår brukerens behov</li>
