fix: footer og innhold som bruker ledig plass i høyden

--- a/team/index.html
+++ b/team/index.html
@@ -27,8 +27,48 @@
       }
     </style>
   </head>
-  <body>
+  <body style="display: flex; flex-direction: column">
     <tr-header></tr-header>
+    <div style="flex: 1">
+      <main style="padding: 2rem; display: grid; gap: 2rem">
+        <section
+          class="section-1"
+          style="display: flex; gap: 2rem; flex-wrap: wrap"
+        >
+          <div style="flex: 1; display: grid; gap: 2rem">
+            <h1 style="font-size: 2em">Retning for Team</h1>
+            <p>
+              Retning for team består av 6 viktige prinsipper. Alle prinsippene
+              har som utgangspunkt i at personer med ulik kompetanse må
+              samarbeide optimalt for å skape verdi for politiet.
+            </p>
+            <div>
+              <h2 style="margin-bottom: 1rem">
+                Retning for Team treffer på PITs ambisjon:
+              </h2>
+              <ul>
+                <li>
+                  Vi er teknologer med hjerte for politiets samfunnsoppdrag.
+                  Nysgjerrighet og tverrfaglighet er vår nøkkel til suksess.
+                </li>
+                <li>
+                  Vi er kompetente og engasjerte medarbeidere, som jobber i
+                  tverrfaglige team uten siloer. Vi tar initiativ,
+                  eksperimenterer og er stolte av kvaliteten i det vi gjør.
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div style="flex: 1">
+            <img
+              src="/images/politiapp.svg"
+              alt="Politimann som trykker på mobiltelefon, mens smilende dame med kaffekopp og en mann venter"
+              style="width: 30rem; height: auto"
+            />
+          </div>
+        </section>
+      </main>
+    </div>
     <main style="padding: 2rem; display: grid; gap: 2rem">
       <section
         class="section-1"
