fix: verktøykasse og fill-content komponenter. Flytt ut subpage css til egen fil

--- a/team/index.html
+++ b/team/index.html
@@ -13,9 +13,12 @@
       rel="stylesheet"
     />
 
-    <link href="/common.css" rel="stylesheet" />
+    <link href="/css/common.css" rel="stylesheet" />
+    <link href="/css/subpage.css" rel="stylesheet" />
     <script type="module" src="/components/header.js"></script>
+    <script type="module" src="/components/verktoykasse.js"></script>
     <script type="module" src="/components/footer.js"></script>
+    <script type="module" src="/components/fill-content.js"></script>
 
     <style>
       /* Section 1 */
@@ -27,9 +30,9 @@
       }
     </style>
   </head>
-  <body style="display: flex; flex-direction: column">
+  <body>
     <tr-header></tr-header>
-    <div style="flex: 1">
+    <tr-fill-content>
       <main style="padding: 2rem; display: grid; gap: 2rem">
         <section
           class="section-1"
@@ -68,45 +71,8 @@
           </div>
         </section>
       </main>
-    </div>
-    <main style="padding: 2rem; display: grid; gap: 2rem">
-      <section
-        class="section-1"
-        style="display: flex; gap: 2rem; flex-wrap: wrap"
-      >
-        <div style="flex: 1; display: grid; gap: 2rem">
-          <h1 style="font-size: 2em">Retning for Team</h1>
-          <p>
-            Retning for team består av 6 viktige prinsipper. Alle prinsippene
-            har som utgangspunkt i at personer med ulik kompetanse må samarbeide
-            optimalt for å skape verdi for politiet.
-          </p>
-          <div>
-            <h2 style="margin-bottom: 1rem">
-              Retning for Team treffer på PITs ambisjon:
-            </h2>
-            <ul>
-              <li>
-                Vi er teknologer med hjerte for politiets samfunnsoppdrag.
-                Nysgjerrighet og tverrfaglighet er vår nøkkel til suksess.
-              </li>
-              <li>
-                Vi er kompetente og engasjerte medarbeidere, som jobber i
-                tverrfaglige team uten siloer. Vi tar initiativ, eksperimenterer
-                og er stolte av kvaliteten i det vi gjør.
-              </li>
-            </ul>
-          </div>
-        </div>
-        <div style="flex: 1">
-          <img
-            src="/images/politiapp.svg"
-            alt="Politimann som trykker på mobiltelefon, mens smilende dame med kaffekopp og en mann venter"
-            style="width: 30rem; height: auto"
-          />
-        </div>
-      </section>
-    </main>
+    </tr-fill-content>
+    <tr-verktoykasse></tr-verktoykasse>
     <tr-footer></tr-footer>
   </body>
 </html>
