--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
     />
 
-    <link href="/common.css" rel="stylesheet" />
+    <link href="/css/common.css" rel="stylesheet" />
     <script type="module" src="/components/box.js"></script>
 
     <style>
