--- a/team/index.html
+++ b/team/index.html
@@ -78,12 +78,72 @@
           text-align: center;
         }
       }
+
+      /* Prinsipper */
+
+      .prinsipper {
+        container: prinsipper / inline-size;
+
+        h2 {
+          padding-bottom: 1rem;
+          margin-bottom: 1rem;
+          border-bottom: 1px solid var(--faded-separator, #c9cee4);
+        }
+
+        .prinsipper-liste {
+          list-style: none;
+          margin: 0;
+          padding: 0;
+
+          li {
+            column-gap: 4rem;
+            row-gap: 1rem;
+
+            &:not(:last-child) {
+              padding-bottom: 1.5rem;
+              margin-bottom: 1.5rem;
+              border-bottom: 1px solid var(--faded-separator, #c9cee4);
+            }
+
+            @container prinsipper (min-width: 700px) {
+              display: flex;
+              flex-wrap: wrap;
+              justify-content: space-between;
+            }
+
+            @container prinsipper (max-width: 700px) {
+              display: grid;
+            }
+          }
+
+          .prinsipper-bilde {
+            display: grid;
+            gap: 1rem;
+            height: fit-content;
+            flex-basis: 16rem;
+          }
+
+          .prinsipper-tekst {
+            flex: 1;
+
+            a {
+              display: flex;
+              align-items: cener;
+              gap: 0.75rem;
+            }
+
+            @container prinsipper (min-width: 700px) {
+              padding-top: 1rem;
+            }
+          }
+        }
+      }
     </style>
   </head>
   <body>
     <tr-header></tr-header>
     <tr-fill-content>
-      <main style="padding: 2rem; display: grid; gap: 2rem">
+      <main style="padding: 2rem; display: grid; gap: 4rem">
         <section class="section-1">
           <div class="section-1-content">
             <h1 class="section-1-main-header">Retning for Team</h1>
@@ -117,6 +177,152 @@
               alt="Politimann som trykker på mobiltelefon, mens smilende dame med kaffekopp og en mann venter"
             />
           </div>
+        </section>
+        <section class="prinsipper">
+          <h2>Prinsipper vi følger</h2>
+          <ul class="prinsipper-liste">
+            <li>
+              <div class="prinsipper-bilde">
+                <img
+                  src="/images/organisasjon.svg"
+                  alt="Tre personer omringet av en sirkel"
+                />
+                <h3>Vi jobber tverrfaglig</h3>
+              </div>
+              <div class="prinsipper-tekst">
+                <p style="margin-bottom: 1rem">
+                  Vi vet hva som skal til for at alle kan dele meninger, ideer
+                  og tanker uten frykt for å uten frykt for negative
+                  konsekvenser for sin egen stilling eller omdømme. Trygghet
+                  skaper grobunn for kreativitet, innovasjon, læring og
+                  kontinuerlig forbedring.
+                </p>
+                <p>
+                  <a href="">
+                    <img src="/images/pil-ned.svg" alt="" />
+                    Les mer
+                  </a>
+                </p>
+              </div>
+            </li>
+            <li>
+              <div class="prinsipper-bilde">
+                <img src="/images/analyse_mikroskop.svg" alt="Mikroskop" />
+                <h3>Vi lærer og ekserimenterer</h3>
+              </div>
+              <div class="prinsipper-tekst">
+                <p style="margin-bottom: 1rem">
+                  Vi vet hva som skal til for at alle kan dele meninger, ideer
+                  og tanker uten frykt for å uten frykt for negative
+                  konsekvenser for sin egen stilling eller omdømme. Trygghet
+                  skaper grobunn for kreativitet, innovasjon, læring og
+                  kontinuerlig forbedring.
+                </p>
+                <p>
+                  <a href="">
+                    <img src="/images/pil-ned.svg" alt="" />
+                    Les mer
+                  </a>
+                </p>
+              </div>
+            </li>
+            <li>
+              <div class="prinsipper-bilde">
+                <img
+                  src="/images/organisasjon.svg"
+                  alt="Tre personer omringet av en sirkel"
+                />
+                <h3>Vi jobber tverrfaglig</h3>
+              </div>
+              <div class="prinsipper-tekst">
+                <p style="margin-bottom: 1rem">
+                  Vi vet hva som skal til for at alle kan dele meninger, ideer
+                  og tanker uten frykt for å uten frykt for negative
+                  konsekvenser for sin egen stilling eller omdømme. Trygghet
+                  skaper grobunn for kreativitet, innovasjon, læring og
+                  kontinuerlig forbedring.
+                </p>
+                <p>
+                  <a href="">
+                    <img src="/images/pil-ned.svg" alt="" />
+                    Les mer
+                  </a>
+                </p>
+              </div>
+            </li>
+            <li>
+              <div class="prinsipper-bilde">
+                <img
+                  src="/images/organisasjon.svg"
+                  alt="Tre personer omringet av en sirkel"
+                />
+                <h3>Vi jobber tverrfaglig</h3>
+              </div>
+              <div class="prinsipper-tekst">
+                <p style="margin-bottom: 1rem">
+                  Vi vet hva som skal til for at alle kan dele meninger, ideer
+                  og tanker uten frykt for å uten frykt for negative
+                  konsekvenser for sin egen stilling eller omdømme. Trygghet
+                  skaper grobunn for kreativitet, innovasjon, læring og
+                  kontinuerlig forbedring.
+                </p>
+                <p>
+                  <a href="">
+                    <img src="/images/pil-ned.svg" alt="" />
+                    Les mer
+                  </a>
+                </p>
+              </div>
+            </li>
+            <li>
+              <div class="prinsipper-bilde">
+                <img
+                  src="/images/organisasjon.svg"
+                  alt="Tre personer omringet av en sirkel"
+                />
+                <h3>Vi jobber tverrfaglig</h3>
+              </div>
+              <div class="prinsipper-tekst">
+                <p style="margin-bottom: 1rem">
+                  Vi vet hva som skal til for at alle kan dele meninger, ideer
+                  og tanker uten frykt for å uten frykt for negative
+                  konsekvenser for sin egen stilling eller omdømme. Trygghet
+                  skaper grobunn for kreativitet, innovasjon, læring og
+                  kontinuerlig forbedring.
+                </p>
+                <p>
+                  <a href="">
+                    <img src="/images/pil-ned.svg" alt="" />
+                    Les mer
+                  </a>
+                </p>
+              </div>
+            </li>
+            <li>
+              <div class="prinsipper-bilde">
+                <img
+                  src="/images/organisasjon.svg"
+                  alt="Tre personer omringet av en sirkel"
+                />
+                <h3>Vi jobber tverrfaglig</h3>
+              </div>
+              <div class="prinsipper-tekst">
+                <p style="margin-bottom: 1rem">
+                  Vi vet hva som skal til for at alle kan dele meninger, ideer
+                  og tanker uten frykt for å uten frykt for negative
+                  konsekvenser for sin egen stilling eller omdømme. Trygghet
+                  skaper grobunn for kreativitet, innovasjon, læring og
+                  kontinuerlig forbedring.
+                </p>
+                <p>
+                  <a href="">
+                    <img src="/images/pil-ned.svg" alt="" />
+                    Les mer
+                  </a>
+                </p>
+              </div>
+            </li>
+          </ul>
         </section>
       </main>
     </tr-fill-content>
