refactor(subpage): flyttet unline styles på <main> til subpage.css

--- a/team/index.html
+++ b/team/index.html
@@ -135,6 +135,8 @@
             @container prinsipper (min-width: 700px) {
               padding-top: 1rem;
             }
+
+            /* behold denne for å unngå syntax-highlighting feil i VSCode */
           }
         }
       }
@@ -143,7 +145,7 @@
   <body>
     <tr-header></tr-header>
     <tr-fill-content>
-      <main style="padding: 2rem; display: grid; gap: 4rem">
+      <main>
         <section class="section-1">
           <div class="section-1-content">
             <h1 class="section-1-main-header">Retning for Team</h1>
