refactor: bruk variabler for farger

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
     <main
       style="
         padding: 2rem;
-        background: #d0e2f3;
+        background: var(--color-lightblue-300, #d0e2f3);
         display: grid;
         gap: 2rem;
         grid-template-columns: repeat(2, 1fr);
@@ -198,7 +198,9 @@
             </p>
           </div>
         </div>
-        <div style="height: 2px; background: #d0e2f3"></div>
+        <div
+          style="height: 2px; background: var(--color-lightblue-300, #d0e2f3)"
+        ></div>
         <section style="display: grid; gap: 2rem">
           <p>
             Vi ønsker å levere tjenester hvor
