fix: fjernet shadowDom og samlet utility komponenter i common.js

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     />
 
     <link href="/css/common.css" rel="stylesheet" />
-    <script type="module" src="/components/box.js"></script>
+    <script type="module" src="/components/common.js"></script>
 
     <style>
       /* Section 1 */
