--- a/team/index.html
+++ b/team/index.html
@@ -15,10 +15,11 @@
 
     <link href="/css/common.css" rel="stylesheet" />
     <link href="/css/subpage.css" rel="stylesheet" />
+    <script type="module" src="/components/common.js"></script>
+    <script type="module" src="/components/header.js"></script>
     <script type="module" src="/components/header.js"></script>
     <script type="module" src="/components/verktoykasse.js"></script>
     <script type="module" src="/components/footer.js"></script>
-    <script type="module" src="/components/fill-content.js"></script>
 
     <style>
       /* Section 1 */
