fix: accordion komponent

--- a/team/index.html
+++ b/team/index.html
@@ -129,7 +129,7 @@
 
             a {
               display: flex;
-              align-items: cener;
+              align-items: center;
               gap: 0.75rem;
             }
 
@@ -200,11 +200,21 @@
                   skaper grobunn for kreativitet, innovasjon, læring og
                   kontinuerlig forbedring.
                 </p>
+                <tr-accordion-content id="accordion-1">
+                  <p style="margin-bottom: 1rem">
+                    Her er noe kul informasjon Her er noe kul informasjon Her er
+                    noe kul informasjon Her er noe kul informasjon Her er noe
+                    kul informasjon Her er noe kul informasjon Her er noe kul
+                    informasjon Her er noe kul informasjon Her er noe kul
+                    informasjon Her er noe kul informasjon Her er noe kul
+                    informasjon Her er noe kul informasjon Her er noe kul
+                    informasjon
+                  </p>
+                </tr-accordion-content>
                 <p>
-                  <a href="">
-                    <img src="/images/pil-ned.svg" alt="" />
-                    Les mer
-                  </a>
+                  <tr-accordion-button
+                    contentSelector="#accordion-1"
+                  ></tr-accordion-button>
                 </p>
               </div>
             </li>
@@ -221,11 +231,21 @@
                   skaper grobunn for kreativitet, innovasjon, læring og
                   kontinuerlig forbedring.
                 </p>
+                <tr-accordion-content id="accordion-2">
+                  <p style="margin-bottom: 1rem">
+                    Her er noe kul informasjon Her er noe kul informasjon Her er
+                    noe kul informasjon Her er noe kul informasjon Her er noe
+                    kul informasjon Her er noe kul informasjon Her er noe kul
+                    informasjon Her er noe kul informasjon Her er noe kul
+                    informasjon Her er noe kul informasjon Her er noe kul
+                    informasjon Her er noe kul informasjon Her er noe kul
+                    informasjon
+                  </p>
+                </tr-accordion-content>
                 <p>
-                  <a href="">
-                    <img src="/images/pil-ned.svg" alt="" />
-                    Les mer
-                  </a>
+                  <tr-accordion-button
+                    contentSelector="#accordion-2"
+                  ></tr-accordion-button>
                 </p>
               </div>
             </li>
@@ -245,11 +265,21 @@
                   skaper grobunn for kreativitet, innovasjon, læring og
                   kontinuerlig forbedring.
                 </p>
+                <tr-accordion-content id="accordion-3">
+                  <p style="margin-bottom: 1rem">
+                    Her er noe kul informasjon Her er noe kul informasjon Her er
+                    noe kul informasjon Her er noe kul informasjon Her er noe
+                    kul informasjon Her er noe kul informasjon Her er noe kul
+                    informasjon Her er noe kul informasjon Her er noe kul
+                    informasjon Her er noe kul informasjon Her er noe kul
+                    informasjon Her er noe kul informasjon Her er noe kul
+                    informasjon
+                  </p>
+                </tr-accordion-content>
                 <p>
-                  <a href="">
-                    <img src="/images/pil-ned.svg" alt="" />
-                    Les mer
-                  </a>
+                  <tr-accordion-button
+                    contentSelector="#accordion-3"
+                  ></tr-accordion-button>
                 </p>
               </div>
             </li>
@@ -269,11 +299,21 @@
                   skaper grobunn for kreativitet, innovasjon, læring og
                   kontinuerlig forbedring.
                 </p>
+                <tr-accordion-content id="accordion-4">
+                  <p style="margin-bottom: 1rem">
+                    Her er noe kul informasjon Her er noe kul informasjon Her er
+                    noe kul informasjon Her er noe kul informasjon Her er noe
+                    kul informasjon Her er noe kul informasjon Her er noe kul
+                    informasjon Her er noe kul informasjon Her er noe kul
+                    informasjon Her er noe kul informasjon Her er noe kul
+                    informasjon Her er noe kul informasjon Her er noe kul
+                    informasjon
+                  </p>
+                </tr-accordion-content>
                 <p>
-                  <a href="">
-                    <img src="/images/pil-ned.svg" alt="" />
-                    Les mer
-                  </a>
+                  <tr-accordion-button
+                    contentSelector="#accordion-4"
+                  ></tr-accordion-button>
                 </p>
               </div>
             </li>
@@ -293,11 +333,21 @@
                   skaper grobunn for kreativitet, innovasjon, læring og
                   kontinuerlig forbedring.
                 </p>
+                <tr-accordion-content id="accordion-5">
+                  <p style="margin-bottom: 1rem">
+                    Her er noe kul informasjon Her er noe kul informasjon Her er
+                    noe kul informasjon Her er noe kul informasjon Her er noe
+                    kul informasjon Her er noe kul informasjon Her er noe kul
+                    informasjon Her er noe kul informasjon Her er noe kul
+                    informasjon Her er noe kul informasjon Her er noe kul
+                    informasjon Her er noe kul informasjon Her er noe kul
+                    informasjon
+                  </p>
+                </tr-accordion-content>
                 <p>
-                  <a href="">
-                    <img src="/images/pil-ned.svg" alt="" />
-                    Les mer
-                  </a>
+                  <tr-accordion-button
+                    contentSelector="#accordion-5"
+                  ></tr-accordion-button>
                 </p>
               </div>
             </li>
@@ -317,11 +367,21 @@
                   skaper grobunn for kreativitet, innovasjon, læring og
                   kontinuerlig forbedring.
                 </p>
+                <tr-accordion-content id="accordion-6">
+                  <p style="margin-bottom: 1rem">
+                    Her er noe kul informasjon Her er noe kul informasjon Her er
+                    noe kul informasjon Her er noe kul informasjon Her er noe
+                    kul informasjon Her er noe kul informasjon Her er noe kul
+                    informasjon Her er noe kul informasjon Her er noe kul
+                    informasjon Her er noe kul informasjon Her er noe kul
+                    informasjon Her er noe kul informasjon Her er noe kul
+                    informasjon
+                  </p>
+                </tr-accordion-content>
                 <p>
-                  <a href="">
-                    <img src="/images/pil-ned.svg" alt="" />
-                    Les mer
-                  </a>
+                  <tr-accordion-button
+                    contentSelector="#accordion-6"
+                  ></tr-accordion-button>
                 </p>
               </div>
             </li>
