--- a/team/index.html
+++ b/team/index.html
@@ -91,8 +91,8 @@
     <tr-fill-content>
       <main>
         <tr-retninger-header>
-          <slot name="title">Retning for Team</slot>
-          <slot name="content">
+          <h1 slot="title">Retning for Team</h1>
+          <div slot="content" data-inner-only>
             <p>
               Retning for team består av 6 viktige prinsipper. Alle prinsippene
               har som utgangspunkt i at personer med ulik kompetanse må
@@ -116,7 +116,7 @@
                 </li>
               </ul>
             </div>
-          </slot>
+          </div>
         </tr-retninger-header>
         <section class="prinsipper">
           <h2>Prinsipper vi følger</h2>
