refactor: flyttet getHTML() til globalt scope

--- a/team/index.html
+++ b/team/index.html
@@ -20,7 +20,7 @@
     <script type="module" src="/components/header.js"></script>
     <script type="module" src="/components/verktoykasse.js"></script>
     <script type="module" src="/components/footer.js"></script>
-    <script type="module" src="/components/retninger-header.js"></script>
+    <script type="module" src="/components/retninger.js"></script>
 
     <style>
       /* Prinsipper */
